fix: spacing on lobby page

--- a/frontend/public/assets/style/style.css
+++ b/frontend/public/assets/style/style.css
@@ -325,7 +325,7 @@ label {
 	flex-grow: 1;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
-	padding-top: 30px;
+	padding-top: 10px;
 }
 
 #lobby-people {
@@ -349,7 +349,7 @@ label {
 	display: flex;
 	flex-direction: column;
 	padding: 10px 160px;
-	padding-top: 30px;
+	padding-top: 10px;
 }
 
 #custom-problems-textarea {
